--- a/app/index.html
+++ b/app/index.html
@@ -288,7 +288,7 @@
     <script>
         // --- 数据与状态 ---
         let apps = JSON.parse(localStorage.getItem('nexus_apps')) || [
-            { id: 1, name: '慕思笔记', icon: 'ri-sticky-note-line', route: 'musu_notes.html', color: '#ff9ff3' },
+            { id: 1, name: '慕思笔记', icon: 'ri-sticky-note-line', route: './notes', color: '#ff9ff3' },
             { id: 2, name: '日历', icon: 'ri-calendar-line', route: '#calendar', color: '#48dbfb' },
             { id: 3, name: '回声', icon: 'ri-voiceprint-line', route: '#voice', color: '#1dd1a1' },
             { id: 4, name: '画廊', icon: 'ri-image-line', route: '#gallery', color: '#feca57' },
