--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>暮苏客</title>
+  <title>慕思 • MUSUC</title>
   <style>
     body {
       margin: 0;
@@ -30,7 +30,7 @@
 </head>
 <body>
   <div>
-    <h1>暮苏客</h1>
+    <h1>慕思 • MUSUC</h1>
     <p>夜色未央，愿您在此稍作停留。</p>
   </div>
 </body>
