--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
   <title>API 联调测试</title>
 </head>
 <body>
-  <h2>API 返回结果：</h2>
+  <h2>API ~~返回结果：</h2>
   <pre id="result">加载中~...</pre>
 
   <script>
