--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
   <pre id="result">加载中~...</pre>
 
   <script>
-    fetch('https://api.musuluv.com/')
+    fetch('https://jsonplaceholder.typicode.com/todos/1')
   .then(response => response.text())
   .then(data => {
     document.getElementById('result').textContent = data;
