--- a/test.html
+++ b/test.html
@@ -5,11 +5,11 @@
   <title>API 联调测试</title>
 </head>
 <body>
-  <h2>API 返回结果：</h2>
+  <h2>API ~~~~返回结果：</h2>
   <pre id="result">加载中~...</pre>
 
   <script>
-    fetch('https://jsonplaceholder.typicode.com/todos/1')
+    fetch('https://api.musuluv.com/')
   .then(response => response.text())
   .then(data => {
     document.getElementById('result').textContent = data;
