--- a/test.html
+++ b/test.html
@@ -5,19 +5,30 @@
   <title>API 联调测试</title>
 </head>
 <body>
-  <h2>API ~~~~返回结果：</h2>
-  <pre id="result">加载中~...</pre>
+  <h2>API ~~~~~~~返回结果：</h2>
+  <pre id="result1">musuluv API 加载中~...</pre>
+  <pre id="result2">jsonplaceholder API 加载中~...</pre>
 
   <script>
+    // 抓 musuluv.com 自己的 API
     fetch('https://api.musuluv.com/')
-  .then(response => response.text())
-  .then(data => {
-    document.getElementById('result').textContent = data;
-  })
-  .catch(err => {
-    alert('请求失败：' + err);
-    document.getElementById('result').textContent = '请求失败：' + err;
-  });
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('result1').textContent = "musuluv API:\n" + data;
+      })
+      .catch(err => {
+        document.getElementById('result1').textContent = 'musuluv API 请求失败：' + err;
+      });
+
+    // 抓 jsonplaceholder 测试 API
+    fetch('https://jsonplaceholder.typicode.com/todos/1')
+      .then(response => response.json())
+      .then(data => {
+        document.getElementById('result2').textContent = "jsonplaceholder API:\n" + JSON.stringify(data, null, 2);
+      })
+      .catch(err => {
+        document.getElementById('result2').textContent = 'jsonplaceholder API 请求失败：' + err;
+      });
   </script>
 </body>
 </html>
